--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -1,1 +1,18 @@
-spring.application.name=app
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/coffeeOrder
+    username: user
+    password: 12345
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    validate-migration-naming: true
+    baseline-on-migrate: true
+    url: jdbc:mysql://localhost:3306/coffeeOrder
+    user: user
+    password: 12345
+    clean-disabled: false
